02. Map: novo array modificado.

--- a/index.html
+++ b/index.html
@@ -312,5 +312,7 @@
       <p>Alura - Mergulhe em tecnologia</p>
     </footer>
     <script src="app/main.js"></script>
+    <script src="app/metodoForEach.js"></script>
+    <script src="app/metodoMap.js"></script>
   </body>
 </html>
