03. Filter: aplicando diferentes filtros.

--- a/index.html
+++ b/index.html
@@ -314,5 +314,6 @@
     <script src="app/main.js"></script>
     <script src="app/metodoForEach.js"></script>
     <script src="app/metodoMap.js"></script>
+    <script src="app/metodoFilter.js"></script>
   </body>
 </html>
